[package]
name = "rustpix"
description = "It is a lightweight Rust-based tool designed to optimize images for web use"
authors = ["Andre Franca <andre@abf.li>"]
version = "0.1.5"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/andrefcodes/rustpix"
repository = "https://github.com/andrefcodes/rustpix.git"
readme = "README.md"
edition = "2021"
keywords = ["image", "webp", "conversion"]
include = ["src", "README.md", "LICENSE-APACHE", "LICENSE-MIT", "LICENSES.md"]

[dependencies]
image = "0.25.6"  # For image processing
uuid = { version = "1.16.0", features = ["v4"] }  # For generating UUIDs
rayon = "1.10"  # For parallel processing
webp = "0.3.0" # For handling webp output resolution